# ZenithOS

.github/workflows/: ci.yml
OS/: .gitignore  AGENTS.md  AUTONOMOUS_WORK_SUMMARY.md  BUILD_STATUS.md  CLAUDE.md  DEPRECATED.md  KERNEL_TRACK_STATUS.md  Makefile  NEW_FEATURES_SUMMARY.md  OS_BUILDING_GUIDE.md  QUICK_START.md  README.md  boot_sequence.md  do-rebuild.sh  full-rebuild.sh  hardware_matrix.md  plan.json  rebuild-with-theme.sh  rebuild.sh  storage.json  threat_model.json
OS/.claude/: settings.local.json
OS/.claude/agents/: auditor.md  cartographer.md  compliance.md  eod-summary.md  hardware-v14.md  kernel-core.md  (+4 more)
OS/.codex/: hooks.json
OS/boot/: limine.conf
OS/docs/: kernel-lab.md  limine-bootstrap.md  terminal-package-phases.md
OS/graphify-out/: graph.html  graph.json
OS/kernel/: linker.ld  main.c  panic.c
OS/tools/: check_workstation.py  create_workstation_install_disk.ps1  format_zenith_usb.ps1  package_userland.py  qemu_diagnostic_matrix.ps1  run_workstation_seed.ps1  smoke_workstation_seed.ps1
OS/userland/: desktop.c  echo.c  help.c  init.c  launcher.c  linker.ld  session.c  settings.c  sh.c  sysinfo.c  terminal.c  terminal.c.audit  terminal.c.phase1.verify
OS/workstation/: CHANGELOG-login-update.md  README.md  architecture.md  roadmap.md
OS/workstation/apps/zenith-calculator/: pyproject.toml
OS/workstation/apps/zenith-calculator/src/zenith_calculator/: __init__.py  main.py
OS/workstation/apps/zenith-installer/: pyproject.toml
OS/workstation/apps/zenith-installer/src/zenith_installer/: __init__.py  main.py
OS/workstation/apps/zenith-packages/: pyproject.toml
OS/workstation/apps/zenith-packages/src/zenith_packages/: __init__.py  main.py  workers.py  zpkg.py
OS/workstation/apps/zenith-packages/tests/: test_workers.py
OS/workstation/apps/zenith-settings/: pyproject.toml
OS/workstation/apps/zenith-settings/src/zenith_settings/: __init__.py  main.py
OS/workstation/apps/zenith-text-editor/: pyproject.toml
OS/workstation/apps/zenith-text-editor/src/zenith_text_editor/: __init__.py  main.py
OS/workstation/apps/zenith-welcome/: pyproject.toml
OS/workstation/apps/zenith-welcome/src/zenith_welcome/: __init__.py  main.py
prompting/: CLAUDE.md  nexus-terminal-final.prompt  nexus-terminal-v1.prompt  nexus-terminal-v2.prompt
prompting/.claude/: settings.local.json
(+172 files in other folders)
