[project]
name = "zenith-calculator"
version = "0.1.0"
description = "ZenithOS calculator"
requires-python = ">=3.11"
dependencies = [
  "PyGObject"
]

[project.scripts]
zenith-calculator = "zenith_calculator.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
