[project]
name = "zenith-installer"
version = "0.1.0"
description = "ZenithOS installer readiness app"
requires-python = ">=3.11"
dependencies = [
  "PyGObject"
]

[project.scripts]
zenith-installer = "zenith_installer.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
