[project]
name = "zenith-packages"
version = "0.1.0"
description = "ZenithOS package manager"
requires-python = ">=3.11"
dependencies = [
  "PyGObject"
]

[project.scripts]
zenith-packages = "zenith_packages.main:main"
zpkg = "zenith_packages.zpkg:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
