[project]
name = "zenith-text-editor"
version = "0.1.0"
description = "ZenithOS text editor"
requires-python = ">=3.11"
dependencies = [
  "PyGObject"
]

[project.scripts]
zenith-text-editor = "zenith_text_editor.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
