[project]
name = "zenith-welcome"
version = "0.1.0"
description = "ZenithOS first-login welcome and status app"
requires-python = ">=3.11"
dependencies = [
  "PyGObject"
]

[project.scripts]
zenith-welcome = "zenith_welcome.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
